CARGO-751 : Make sure all containers handle the memory-related JVM arguments the same way