@@ -17,7 +17,6 @@
  */
 package org.codehaus.cargo.container.weblogic;
 
-import org.apache.tools.ant.taskdefs.Java;
 import org.codehaus.cargo.container.configuration.LocalConfiguration;
 import org.codehaus.cargo.container.weblogic.internal.AbstractWebLogicInstalledLocalContainer;
 
@@ -69,16 +68,5 @@ public class WebLogic9xInstalledLocalContainer
     public String getAutoDeployDirectory()
     {
         return "autodeploy";
-    }
-
-    /**
-     * {@inheritDoc}
-     * 
-     */
-    protected void addDefaultMemArgs(Java java)
-    {
-        java.createJvmarg().setValue("-Xms32m");
-        java.createJvmarg().setValue("-Xmx200m");
-        java.createJvmarg().setValue("-XX:MaxPermSize=128m");
     }
 }
